# Chess_Engine

./: CMakeLists.txt  Readme.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  evaluate.cpp  evaluate.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perfit.cpp  perfit.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
